*Empty MediaWiki Message*

--- a/Kopaiž-sugaižen_keramikan_kul'tur.mw
+++ b/Kopaiž-sugaižen_keramikan_kul'tur.mw
@@ -1,5 +1,5 @@
 [[Fail:European-middle-neolithic-en.svg|thumb|right|275px|Evrop kesk[[neolit]]an aigan. Kopaiž-sugaižen keramikan kul'tur — ruskedsinine]]
-'''Sugaižen keramikan kul'tur''' vai '''kopaiž-sugaižen keramikan kul'tur''' om [[arheologine kul'tur]], kudamb oli levitadud [[kiviaig]]as [[Evrop]]an homendezbokas ([[Skandinavii]], [[Venäma]]n lodeh), läz 4200 — 2000 vozid e.m.e. Nimituz om anttud keramižiden löudmižiden čomitesen mahton, kudambad oma harakterižed necile kul'turale. Ned nägudas kuti [[suga|sugiden]] jäl'ged.
+'''Sugaižen keramikan kul'tur''' vai '''kopaiž-sugaižen keramikan kul'tur''' om [[arheologine kul'tur]], kudamb oli levitadud [[kiviaig]]as [[Evrop]]an homendezbokas ([[Skandinavii]], [[Venäma]]n lodeh), läz 4200 — 2000 vozid e.m.e. Nimituz om anttud keramižiden löudmižiden čomitesen mahton mödhe, kudambad oma harakterižed necile kul'turale. Ned nägudas kuti [[suga|sugiden]] jäl'ged.
 
 {{stub}}
 
