--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -32,7 +32,7 @@ Se om '''täuz' Venälaižen valdkundan pämehiden nimikirjutez'''.
 # [[Mstislav II]] (1158—1159, 1167—1169)
 # [[Andrei I Bogolübovon]] (1169—1174)
 # [[Mihail Jur'jevič]] (1174, 1175—1176)
-# [[Jaropolk Rostislavič]] (1174—1175
+# [[Jaropolk Rostislavič]] (1174—1175)
 # [[Vsevolod III Sur' Peza]] (1176—1212)
 # [[Jurii II]] (1212—1216, 1218—1238)
 # [[Konsantin Vsevolodovič]] (1216—1218)
