*Empty MediaWiki Message*

--- a/Desireless.mw
+++ b/Desireless.mw
@@ -1,4 +1,4 @@
-'''Desireless''' (todesine nimi — '''Klodi Fritš-Mentpop''' ([[francijan kel'|franc.]]: ''Claudie Fritsch-Mentrop''); sünd. [[25. tal'vku]] [[1952]], [[Pariž]], [[Francii]]) om francijalaine pajatai.
+'''Desireless''' (todesine nimi — '''Klodi Fritš-Mentpop''' ([[francijan kel'|franc.]]: ''Claudie Fritsch-Mentrop''); sünd. [[25. tal'vku]] [[1952]], [[Pariž]], [[Francii]]) om tetab francijalaine pajatai.
 
 == Diskografii ==
 
@@ -31,6 +31,7 @@
 == Irdkosketused ==
 * [http://www.desireless.net/ Oficialine sait]
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Francijan pajatajad]]
