*Empty MediaWiki Message*

--- a/François_(al'bom).mw
+++ b/François_(al'bom).mw
@@ -14,6 +14,7 @@
 # ''Dis pourquoi'' (4:42)
 # ''[[Voyage, voyage]]'' (4:22)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
