*Empty MediaWiki Message*

--- a/I_Love_You.mw
+++ b/I_Love_You.mw
@@ -13,6 +13,7 @@
 # ''Vous'' (3:39)
 # ''Les escaliers du bal'' (3:54)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
