*Empty MediaWiki Message*

--- a/Un_brin_de_paille.mw
+++ b/Un_brin_de_paille.mw
@@ -19,6 +19,7 @@
 # ''L'amour, l'amour'' (7:40)
 # ''Love Is My Way'' (←)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
