*Empty MediaWiki Message*

--- a/More_Love_and_Good_Vibrations.mw
+++ b/More_Love_and_Good_Vibrations.mw
@@ -16,6 +16,7 @@
 # ''C'est pas la peine (Desire Club edit)'' (3:55)
 # ''Dans le Jardin d'Eden (RG Infini Mix)'' (8:41)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
