*Empty MediaWiki Message*

--- a/Le_petit_bisou.mw
+++ b/Le_petit_bisou.mw
@@ -24,6 +24,7 @@
 # ''Petit pharaon'' (4:34)
 # ''Y'A Quelqu'un'' (1:22)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
