*Empty MediaWiki Message*

--- a/Ses_plus_grands_succès.mw
+++ b/Ses_plus_grands_succès.mw
@@ -19,6 +19,7 @@
 # ''Les escaliers du bal'' (3:54)
 # ''[[Voyage, voyage]] (PWL remix)'' (7:03)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Kompiläcijanal'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
