*Empty MediaWiki Message*

--- a/L'Œuf_du_Dragon.mw
+++ b/L'Œuf_du_Dragon.mw
@@ -9,6 +9,7 @@
 # ''Joue (remix by Stolearm)'' (03:54)
 # ''Le sel sur tes mains (remix by Dekad)'' (03:39)
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:Desireless:an al'bomad]]
