*Empty MediaWiki Message*

--- a/Voyage,_voyage.mw
+++ b/Voyage,_voyage.mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[francijan kel'|francijan kelel]].
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:Desireless:an pajod]]
