--- a/John_(Desireless:an_pajo).mw
+++ b/John_(Desireless:an_pajo).mw
@@ -2,6 +2,7 @@
 
 Pajon tekst om [[francijan kel'|francijan kelel]].
 {{stub}}
+{{Desireless}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
 [[Kategorii:Desireless:an pajod]]
