--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -1,4 +1,16 @@
 __NOTOC__
+{{col-begin}}
+{{col-2}}
+: «Deep in my heart there's a fire — a burning heart
+: Deep in my heart there's desire for a start
+: I'm dyin' in emotion, it's my world in fantasy
+: I'm livin' in my, livin' in my dreams.»
+{{col-2}}
+: «Süväs minun südäiš om lämoi — südäin lemgab
+: Süväs minun südäiš om himo augotada
+: Kolen emocijoišpäi, se om minun fantazijoiden mail'm
+: Elän ičeze... elän ičeze unikoviš.»
+{{col-end}}
 [[Fail:YoureMyHeartPiano.png|thumb|right|350px|Pajon notgrafik [[fortepiano]]le da [[sintezator]]ale]]
 [[Fail:You're My Heart, You're My Soul (cover).jpeg|thumb|left|230px|Originaline singlankor']]
 '''«You're My Heart, You're My Soul»''' (''Sinä oled minun südäin, sinä oled minun heng'') om [[Modern Talking]]-kollektivan tetab pajo da ühtinnimine singl «[[The 1st Album]]»-al'bomas<ref>http://www.allmusic.com/album/r210962</ref>, kudamb om pästtud [[1984]]-žen voden [[29. reduku|redukun 29. päiväl]]<ref>http://www.modern-talking-online.de/singles.htm</ref>, [[BMG]]- da [[Hansa Records]]-leibloil.<ref>http://www.discogs.com/Modern-Talking-Youre-My-Heart-Youre-My-Soul/master/24417</ref> Se om gruppan debütine singl. Om änetud [[anglijan kel'|anglijan kelel]].
