*Empty MediaWiki Message*

--- a/Borkum.mw
+++ b/Borkum.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Borkum<br />Boarkum
  | Lidnanznam = DEU Borkum COA.svg
- | Flag = Borkum Flagge.gif
+ | Flag = Flagge Borkum.svg
  | Lidnanznam text = Borkuman lidnanznam
  | Flag text = Borkuman flag
  | Valdkund = Saksanma
