*Empty MediaWiki Message*

--- a/Hahm.mw
+++ b/Hahm.mw
@@ -1,5 +1,5 @@
 [[Fail:Wolverine on rock.jpg|pisi|300px|Hahm]]
-'''Hahm''' ([[Latinan kel'|lat.]] '' Gulo gulo'') om [[živat]].
+'''Hahm''' ([[Latinan kel'|lat.]] '' Gulo gulo'') om [[Imetaiživatad|imetaiživat]].
 
 {{stub}}
 
