*Empty MediaWiki Message*

--- a/Vändai_vin.mw
+++ b/Vändai_vin.mw
@@ -10,3 +10,4 @@ Erazvuiččiš maiš (sidä kesken [[Venäma]]s) vändai vin om [[šampanj]]an s
 {{stub}}
 
 [[Kategorii:Alkogoližed jomad]]
+[[Kategorii:Vändajad vinad]]
