--- a/Čagan_Gol.mw
+++ b/Čagan_Gol.mw
@@ -1,8 +1,6 @@
-'''Čagan Gol''' ([[venäkel'|ven.]]: ''Чаган-Гол'') om jogi [[Venäma]]s, [[Altajan Tazovaldkund]]as. Om [[Justit]]-jogen päližajogi, [[Ob']]-jogen basseinan pala. Lankteb [[Karan meri]]he.
+'''Čagan Gol''' ([[venäkel'|ven.]]: ''Чаган-Гол'') om jogi [[Venäma]]s, [[Altajan Tazovaldkund]]as. Om [[Justit]]-jogen päližajogi, [[Ob']]-jogen basseinan pala.
 
 Piduz om läz 11 kilometrad.
 {{stub}}
 
 [[Kategorii:Joged kirjamišton mödhe]]
-
-[[ru:Чаган-Гол]]
