--- a/Ritter_Sport.mw
+++ b/Ritter_Sport.mw
@@ -1,7 +1,7 @@
 [[Fail:Ritter s.JPG|thumb|right|250px|Ritter Sport:an pälitez]]
 '''«Ritter Sport»''' om [[Saksanma|saksalaine]] šokoladfabrik. Tegeb [[1912]] vspäi [[Štutgart]]as.
 
-Päeriližuz om šokoladlastuižiden [[nellik|nellform]], kudambad oma jagatud 16 kubuzihe; da eriline „knick-pack“-pälitez. Om läz 40 toižendad (pened da sured lastuižed).
+Päeriližuz om šokoladlastuižiden [[nellik]]form, kudambad oma jagatud 16 kubuzihe; da eriline „knick-pack“-pälitez. Om läz 40 toižendad (pened da sured lastuižed).
 {{stub}}
 
 [[Kategorii:Šokoladfabrikad]]
