Насчёт "summ" тут не уверен, по идее во множ....

--- a/Kahesan_nellikon_identižuz.mw
+++ b/Kahesan_nellikon_identižuz.mw
@@ -1,7 +1,7 @@
-'''Kahesan nellikoiden identižuz''' om [[matematine teorem]]. Avaidud [[Degen Karl Ferdinand|K. F. Degenalpäi]] 1818-žes vodes.
+'''Kahesan nellikon identižuz''' om [[matematine teorem]]. Avaidud [[Degen Karl Ferdinand|K. F. Degenal]] 1818-žes vodes.
 {| style="background-color: #ffffff; margin-left: 4em; margin-right: 4em; border: {{{1|1px solid}}}; padding: 2px;"
 |
-'''Kahesan nellikoiden summoiden liža {{k|произведение}} om kahesan nellikoiden summ.'''
+'''Kahesan nellikon summoiden liža {{k|произведение}} om kahesan nellikon summ.'''
 |}
 Toziolendas:
 {| style="background-color: #ffffff; margin-left: 4em; margin-right: 4em; border: {{{1|1px solid}}}; padding: 2px;"
