Lähen (близко к) - с партитивом, по логике тут также

--- a/Ruskedvauvaz_vin.mw
+++ b/Ruskedvauvaz_vin.mw
@@ -1,5 +1,5 @@
 [[Fail:Listel 1.jpg|thumb|right|250px|[[Listel]]-brendan ruskedvauvaz vin]]
-'''Ruskedvauvaz vin''' om [[vin]]an tip, läheline [[vauged vin|vauktanno]] i [[rusked vin|rusttanno]] vinoidenno.
+'''Ruskedvauvaz vin''' om [[vin]]an tip, läheline [[vauged vin|vauktad]] i [[rusked vin|rusttad]] vinoid.
 
 Buketan i magun mödhe om kuti vauged vin, a sen muju iškeb rusttan vinan mujuha. Tehmižen keskuz om [[Provans]]-agjas, [[Francii|Francijas]].
 {{stub}}
