*Empty MediaWiki Message*

--- a/Savant_Merilin_vos.mw
+++ b/Savant_Merilin_vos.mw
@@ -5,6 +5,4 @@
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Dramaturgad kirjamišton mödhe]]
 [[Kategorii:Lehtezmehed kirjamišton mödhe]]
-[[Kategorii:Rinnessan Rekordkirjan rekordsmenad]]
-
-[[ru:Савант, Мэрилин вос]]
+[[Kategorii:Ginnessan Rekordkirjan rekordsmenad]]
