/* Eläbad */ хотя там уже подавляющее большинство на английский перешло

--- a/Slavižed_keled.mw
+++ b/Slavižed_keled.mw
@@ -130,7 +130,7 @@ Amuuz'lidnan kel' harvašti mülütas m. k. pohjoižslavižen kel'vezaha.
 | 1.
 | [[Pol'šan kel'|Pol'šan]]
 | ''Język polski''
-| [[Fail:Flag of Poland.svg|border|20px]] [[Pol'šanma]]
+| [[Fail:Flag of Poland.svg|border|20px]] [[Pol'šanma]]<br />[[Fail:Flag of USA.svg|border|20px]] [[AÜV]]
 | 40—50 millionad
 | latinan
 | pol
