--- a/Slavižed_keled.mw
+++ b/Slavižed_keled.mw
@@ -93,7 +93,7 @@ Amuuz'lidnan kel' harvašti mülütas m. k. pohjoižslavižen kel'vezaha.
 |-
 |}
 
-<!--==== Toižed ====
+==== Toižed ====
 {| class="sortable wikitable"
 ! №
 ! Kel'
@@ -105,15 +105,15 @@ Amuuz'lidnan kel' harvašti mülütas m. k. pohjoižslavižen kel'vezaha.
 ! ISO 639-3-kod
 |-
 | 1.
-| [[Mednijan kel'|Mednijan]]
-| ''???''
+| [[Pomoran dialekt|Pomoran]]
+| ''Поморська говоря''
 | [[Fail:Flag of Russia.svg|border|20px]] [[Venäma]]
-| 5—350
-| [[Mednii]]-saren aleutalaižiden kel'; faktižikš — venä-aleutan [[pidžin]]
-| ei ole
-| mud
+| 500—2000
+| Venäkelen dialekt, kudambal pagištas [[pomorad]] ([[venälaižed|venälaižiden]] subetnine grupp)
+| kirilline
+| —
 |-
-|}-->
+|}
 
 === Päivnouzmslavižed keled ===
 
