--- a/Vepsän_küläd.mw
+++ b/Vepsän_küläd.mw
@@ -150,7 +150,7 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 | ''Марково''
 | 24 (2002)
 |-
-| [[Oja (Vologdan ahj)|Oja]]
+| [[Oja (Vologdan agj)|Oja]]
 | ''Ручей''
 | 1 (2002)
 |-
