--- a/Kičoja.mw
+++ b/Kičoja.mw
@@ -15,7 +15,7 @@
 }}
 '''Kičoja''', vai '''Čuroja''' ([[venäkel'|ven.]]: ''Чурручей'') om pen' [[Vepsänma|vepsän]] külä [[Leningradan agj]]an [[Kos'kenaluižen rajon‎|Kos'kenaluižen (Podporožjen) rajonas]].
 
-Ezmäine kirjutamine Kičojan polhe om datiruitud vl 1563. Mülüi Skobelicinad-pomeščikoihe edelespäi.
+Ezmäine kirjutamine Kičojan polhe om datiruitud vl 1563. Mülüi Skobelicinad-pomeššikoihe edelespäi.
 
 Vnno 2007 küläs eli vaiše üks' kaikenaigaine eläi (mez', i hän om [[vepsläižed|vepsläine]]); hot' dačnikad ajadas tänna kezan aigan. Pidab sanuda, miše Kičojas ei nikonz olend äjid rahvast, ezikät, sen kožutoman sijadusen tagapäi: ühtenzoituz mail'manke putub vaiše päliči [[Ojat' (jogi)|Ojat'-joges]], ei ole hüväd jaugnikted. Eländpunktas om üks'jäine ird — Jogentagaine (''Заречная'').
 
