*Empty MediaWiki Message*

--- a/Gruzii.mw
+++ b/Gruzii.mw
@@ -11,7 +11,7 @@
 | align="center" width="140px" | 
 |}
 |-
-| align=center colspan=2 | [[Fail:Georgia (orthographic projection with inset).svg|300px]]
+| align=center colspan=2 | [[Fail:Georgia (orthographic projection with inset).svg|300px]]<!--pls don't change the current Gruzian [a.k.a. Georgian] map: your edits will be undid in any case. thx in advance-->
 |}
 '''Gruzii''' (gruz.: საქართველო) om valdkund [[Evropa]]s. Sen pälidn om [[Tbilisi]].
 
