--- a/Lorin.mw
+++ b/Lorin.mw
@@ -20,3 +20,5 @@ Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Eupho
 [[Kategorii:Pajatajad kirjamišton mödhe]]
 [[Kategorii:Ročinman pajatajad]]
 [[Kategorii:Evrovizii]]
+
+{{Link GA|pl}}
