*Empty MediaWiki Message*

--- a/Džeronimo.mw
+++ b/Džeronimo.mw
@@ -1,5 +1,5 @@
 [[Fail:Goyathlay.jpeg|thumb|right|250px|Džeronimo]]
-'''Džeronimo''' ([[Anglijan kel'|angl.]] ''Geronimo'', čirikauan nimi '''Gujahle''' (Guyaałé), midä znamoičeb ''«Se, ken haikostase»''; [[16. kezaku]] [[1829]] — [[17. uholu]] [[1909]]) oli [[čirikaua (heim)|čirikaua-apačijoiden]] voinpämez', kudamb 25 voden joksten oli voibištelendan ezinenas, konz [[AÜV]] napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikalaižele armijale.
+'''Džeronimo''' ([[Anglijan kel'|angl.]] ''Geronimo'', čirikauan nimi '''Gujahle''' (Guyaałé), midä znamoičeb ''«Se, ken haikostase»''; [[16. kezaku]] [[1829]] — [[17. uhoku]] [[1909]]) oli [[čirikaua (heim)|čirikaua-apačijoiden]] voinpämez', kudamb 25 voden joksten oli voibištelendan ezinenas, konz [[AÜV]] napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikalaižele armijale.
 
 
 {{stub}}
