--- a/Lorin.mw
+++ b/Lorin.mw
@@ -1,5 +1,5 @@
 [[Fail:Loreen(cropped).jpg|thumb|right|250px|Lorin]]
-'''Lorin Zineb Nora Tal'haui''' ([[ročin kel'|roč.]] ''Lorine Zineb Nora Talhaoui'', [[araban kel'|arab.]] ''لورين زينب نوكا طلحاوي'') vai '''Lorin''' (''Loreen''; sünd. [[16. reduku]] [[1983]], [[Stokhol'm]], [[Ročinma]]) om ročine pajatai, kudambal om marokolaiž-berberaine augotižlibund.
+'''Lorin Zineb Nora Tal'haui''' ([[ročin kel'|roč.]] ''Lorine Zineb Nora Talhaoui'', [[araban kel'|arab.]] ''لورين زينب نوكا طلحاوي'') vai '''Lorin''' (''Loreen''; sünd. [[16. reduku]] [[1983]], [[Stokhol'm]], [[Ročinma]]) om ročilaine pajatai, kudambal om marokolaiž-berberaine augotižlibund.
 
 Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Euphoria]]"-pajon. Lorin sai 1-nden sijan (372 čokkoint).
 
