*Empty MediaWiki Message*

--- a/Yaki-Da.mw
+++ b/Yaki-Da.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://www.john.bryntze.net/aceofbase/placeoface/yaki-da/index.htm
 }}
-'''«Yaki-Da»''' vai '''«Y-D»''' oli [[Ročinma|ročine]] muzikaline grupp [[Göteborg]]aspäi. Mülükund oli ''Linda Šenberg'' da ''Meri Knutsen-Grin''.
+'''«Yaki-Da»''' vai '''«Y-D»''' oli [[Ročinma|ročilaine]] muzikaline grupp [[Göteborg]]aspäi. Mülükund oli ''Linda Šenberg'' da ''Meri Knutsen-Grin''.
 
 == Diskografii ==
 
