--- a/Scania.mw
+++ b/Scania.mw
@@ -1,4 +1,4 @@
 [[Fail:Omniexpress.jpg|right|thumb|250px|Scania OmniExpress]]
-'''Scania AB''' om [[Ročinma|ročine]] kaikiš sureb [[avtobus]]oiden da jügu[[avto]]iden tegii, pästab avtobusoid 1920 vlpäi. Štab-fater sijadase Södertel'jen-lidnas ([[Stokhol'm]]an ezilidn).
+'''Scania AB''' om [[Ročinma|ročilaine]] kaikiš suremb [[avtobus]]oiden da jügu[[avto]]iden tegii, pästab avtobusoid 1920 vlpäi. Štab-fater sijadase Södertel'jen-lidnas ([[Stokhol'm]]an ezilidn).
 
 [[Kategorii:Avtotegijad]]
