*Empty MediaWiki Message*

--- a/Secret_Service.mw
+++ b/Secret_Service.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Bjorn Hokanson
  | Sait = http://www.secretservicemusic.ru/en
 }}
-'''«Secret Service»''' om [[Ročinma|ročine]] muzikaline grupp [[Stokhol'm]]aspäi. Mülükund om [[Hokansson Ula|Ula Hokansson]], Tim Norell, Ul'f Valberg, Tonni Lindberg, Leif Paulsen da Leif Juhansson.
+'''«Secret Service»''' om [[Ročinma|ročilaine]] muzikaline grupp [[Stokhol'm]]aspäi. Mülükund om [[Hokansson Ula|Ula Hokansson]], Tim Norell, Ul'f Valberg, Tonni Lindberg, Leif Paulsen da Leif Juhansson.
 
 Kaikiš tetabamb gruppan pajo — «10 O'Clock Postman».
 
