*Empty MediaWiki Message*

--- a/Lorin.mw
+++ b/Lorin.mw
@@ -12,6 +12,8 @@ Vl 2012 hän ezini "[[Evrovizii-2012|Evrovizii]]"-konkursal, kus pajati "[[Eupho
 * ''[[My Heart is Refusing Me]]'' (2011)
 * ''[[Sober]]'' (2011)
 * ''[[Euphoria]]'' (2012)
+* ''[[Crying Out Your Name]]'' (2012)
+* ''[[We Got The Power]]'' (2013)
 
 == Irdkosketused ==
 * [http://www.loreen.se/ Oficialine sait]
