--- a/Ištui_Härg.mw
+++ b/Ištui_Härg.mw
@@ -1,5 +1,5 @@
 [[Fail:Chief sitting bull.JPG|thumb|right|250px|Ištui Härg]]
-'''Ištui Härg''' ([[Dakotan kel'|Dakotan kelel]] ''Tȟatȟáŋka Íyotake (Tatanka Ijotake) — «Bizon, ištui mas»''; läz [[1831]] — [[15. tal'vku]] [[1890]]) oli [[hunkap]]-[[indejalaižed|indejalaižiden]] heimon pämez'. Hän oli indejalaižiden heimoiden ezinenas, kudambad vastustuiba sirdushe [[Indejalaižiden rezervacii|rezervacijoihe]].
+'''Ištui Härg''' ([[lakotan kel'|lakotan kelel]] ''Tȟatȟáŋka Íyotake (Tatanka Ijotake) — «Bizon, ištui mas»''; läz [[1831]] — [[15. tal'vku]] [[1890]]) oli [[hunkap]]-[[indejalaižed|indejalaižiden]] heimon pämez'. Hän oli indejalaižiden heimoiden ezinenas, kudambad vastustuiba sirdushe [[Indejalaižiden rezervacii|rezervacijoihe]].
 
 {{stub}}
 
