*Empty MediaWiki Message*

--- a/Todesine_Iisusan_jumalankodikund.mw
+++ b/Todesine_Iisusan_jumalankodikund.mw
@@ -1,5 +1,5 @@
 [[Fail:Big root church.JPG|thumb|right|250px|[[Loičendkodi]] [[Fučžou]]s (Kitai)]]
-'''Todesine Iisusan jumalankodikund''' ([[kitajan kel'|kit.]]: ''真耶穌教會'', [[anglijan kel'|angl.]]: ''True Jesus Church'', [[venäkel'|ven.]]: ''Истинная церковь Иисуса'') om [[hristanuskond]]an sekt, sattud [[1917]]-nden voden [[Pekin]]as. Om enamb 2,5 millionad mest kaiked mail'madme.
+'''Todesine Iisusan jumalankodikund''' ([[kitajan kel'|kit.]]: ''真耶穌教會'', [[anglijan kel'|angl.]]: ''True Jesus Church'', [[venäkel'|ven.]]: ''Истинная церковь Иисуса'') om [[hristanuskond]]an sekt, sattud [[1917]]-nden voden [[Pekin]]as. Om enamb 2,5 millionad ristitud kaiked mail'madme.
 {{stub}}
 
 [[Kategorii:Jumalankodikundad]]
