--- a/Ročine_laud.mw
+++ b/Ročine_laud.mw
@@ -1,5 +1,5 @@
-[[Fail:Sveas brunch.jpg|thumb|right|250px|Tipižen ročilaižen laudan fragment]]
-'''Ročilaine laud''', vai '''bufetlaud''' ([[ročin kel'|roč.]]: ''smörgåsbord'', [[danijan kel'|dan.]]: ''det kolde bord'', [[norvegijan kel'|norv.]]: ''koldtbord'', [[venäkel'|ven.]]: ''шведский стол'') om laud[[serviruind]]an populärine mahtuz, kudamb idi [[Skandinavii|skandinavijalaižiš]] valdkundoiš, i sai levigandusen kaiked [[Evrop]]adme.
+[[Fail:Swedish buffet-Smörgåsbord-01 (cropped).jpg|thumb|right|250px|Tipine ročilaine laud]]
+'''Ročilaine laud''', vai '''bufetlaud''' ([[ročin kel'|roč.]]: ''smörgåsbord'', [[danijan kel'|dan.]]: ''det kolde bord'', [[norvegijan kel'|norv.]]: ''koldtbord'', [[islandijan kel'|isl.]]: ''hlaðborð'', [[venäkel'|ven.]]: ''шведский стол'') om laud[[serviruind]]an populärine mahtuz, kudamb idi [[Skandinavii|skandinavijalaižiš]] valdkundoiš, i sai levigandusen kaiked [[Evrop]]adme.
 
 Ročilaižel laudal kaik sömižed pandas laptati, a adivod [[banket]]an vai [[furšet]]an aigan voidas otta sömad sigäpäi blödiš.
 
