ičeinnoks - это скорее в 1 л., как правильно в 3 л. спрошу

--- a/Puerto_Iguasu.mw
+++ b/Puerto_Iguasu.mw
@@ -20,7 +20,7 @@ Puerto Iguasun pind om läz 759 km², a sen eläjiden lugu oli 82,227 ristitud 2
 
 Ühtenzoittud brazilijalaiženke [[Fos du Iguasu]]-lidnanke nügüdläižen sildan abul.
 
-Lidnan ümbrištos om [[Iguasu-vezilanktendad]] — nece čoma londuzkompleks vedadab ičeinnoks äjid turistoid kaikespäi mail'maspäi.
+Lidnan ümbrištos om [[Iguasu-vezilanktendad]] — nece čoma londuzkompleks vedab ičeinnoks äjid turistoid kaikespäi mail'maspäi.
 {{stub}}
 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
