*Empty MediaWiki Message*

--- a/Evropan_valdkundad.mw
+++ b/Evropan_valdkundad.mw
@@ -39,7 +39,7 @@
 |-
 | [[File:Flag of Iceland.svg|150px]] || [[File:Coat of arms of Iceland.svg|150px]] || [[Islandii]] || [[Reikjavik]] || [[Islandijan kel'|islandijan]]
 |-
-| [[File:Flag of Spain.svg|150px]] || [[File:Coat of Arms of Spain.svg|150px]] || [[Ispanii]] || [[Madrid]] || [[Ispanijan kel'|ispanijan]]
+| [[File:Flag of Spain.svg|150px]] || [[File:Escudo de España (mazonado).svg|150px]] || [[Ispanii]] || [[Madrid]] || [[Ispanijan kel'|ispanijan]]
 |-
 | [[File:Flag of Italy.svg|150px]] || [[File:Italy-Emblem.svg|150px]] || [[Italii]] || [[Rim]] || [[Italijan kel'|italijan]]
 |-
