--- a/Vepsläižed.mw
+++ b/Vepsläižed.mw
@@ -115,12 +115,14 @@ Vepsän rahvahan amuižes istorijas tetas lüjas vähä.
 
 == Tetabad vepsläižed ==
 * [[Süvären Aleksandr]] — venäläine ortodoksine pühämez', igumen.
-* [[Jašdären Iona]] — venäläine ortodoksine pühämez'
-* [[Strogalščikova Zinaida|Zinaida Strogalščikova]] — politikanak.
+* [[Jašdären Iona]] — venäläine ortodoksine pühämez'.
+* [[Strogalščikova Zinaida|Zinaida Strogalščikova]] — politikanmez'.
 * [[Lisicina Anna|Anna Lisicina]] — [[Karjalaiž-Suomalaine Nevondkundaline Socialistine Tazovaldkund|Karjalaiž-Suomalaižen Nevondkundaližen Socialistižen Tazovaldkundan]] Kommunistižen partijan keskuzkomitetan sidonik, partizan. Hän om Nevondkundaližen Ühtištusen vägimez'.
 * [[Abramov Nikolai|Nikolai Abramov]] — vepsän runokirjutai, lehtezmez' da aktör.
 * [[Lonin Rürik|Rürik Lonin]] — Šoutjärven (Šoutarven) Vepsän etnografižen muzejan alusenpanii, runokirjutai.
 * [[Petuhov Anatolii|Anatolii Petuhov]] — vologdalaine kirjutai.
+* [[Gorbačov Mark|Mark Gorbačov]] — nevondkundaline valdkundmez'.
+* [[Man'kin Ivan|Ivan Man'kin]] — nevondkundaline valdkundmez'.
 
 [[Kategorii:Rahvahad]]
 [[Kategorii:Vepsläižed|*]]
