--- a/San_Marino.mw
+++ b/San_Marino.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''San Marino'''<br />'''San-Marino'''</big></big>
+|+<big><big>'''San Marino'''<br />'''San Marino'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:Location San Marino Europe.png|300px]]
 |}
-'''San-Marino''' ([[Italijan kel'|ital.]]: ''San Marino'') — valdkund [[Evropa]]s.
+'''San Marino''' ([[Italijan kel'|ital.]]: ''San Marino'') — valdkund [[Evropa]]s.
 
 Eläjiden lugu — 40 560.</br>
 Pind — 61 km<sup>2</sup>.
@@ -28,7 +28,7 @@ Pind — 61 km<sup>2</sup>.
 
 == Ižanduz ==
 
-{{Evropa}}
+{{Evrop}}
 {{stub}}
 
 [[Kategorii:San-Marino| ]]
