*Empty MediaWiki Message*

--- a/Italii.mw
+++ b/Italii.mw
@@ -14,7 +14,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Italy.svg|300px]]
 |}
-'''Italii''' ([[Italijan kel'|italijan kelel]]: ''Italia'') — valdkund [[Evrop]]as, Adriatikan, Tirrenan, Ionan da Keskmeren merid randal. [[EÜ]]n ühtnii. Italijan oma mavaldkundröunad [[Francii|Francijanke]], [[Šveicarii|Šveicarijanke]], [[Avstrii|Avstrijanke]], [[Slovenii|Slovenijanke]], [[San-Marino]]nke da [[Vatikan]]anke.
+'''Italii''' ([[Italijan kel'|italijan kelel]]: ''Italia'') — valdkund [[Evrop]]as, Adriatikan, Tirrenan, Ionan da Keskmeren merid randal. [[EÜ]]n ühtnii. Italijan oma mavaldkundröunad [[Francii|Francijanke]], [[Šveicarii|Šveicarijanke]], [[Avstrii|Avstrijanke]], [[Slovenii|Slovenijanke]], [[San Marino]]nke da [[Vatikan]]anke.
 
 Pälidn — [[Rim]].</br>
 Eläjiden lugu — 60,1 mil.</br>
