--- a/Evropan_valdkundad.mw
+++ b/Evropan_valdkundad.mw
@@ -79,7 +79,7 @@
 |-
 | [[File:Flag of Germany.svg|150px]] || [[File:Coat_of_Arms_of_Germany.svg|150px]] || [[Saksanma]] || [[Berlin]] || [[Saksan kel'|saksan]]
 |-
-| [[File:Flag of San Marino.svg|150px]] || [[File:Coat of arms of San Marino.svg|150px]] || [[San-Marino]] || [[San-Marino (lidn)|San-Marino]] || [[Italijan kel'|italijan]]
+| [[File:Flag of San Marino.svg|150px]] || [[File:Coat of arms of San Marino.svg|150px]] || [[San Marino]] || [[San Marino (lidn)|San Marino]] || [[Italijan kel'|italijan]]
 |-
 | [[File:Flag of Serbia.svg|150px]] || [[File:Coat of arms of Serbia.svg|150px]] || [[Serbii]] || [[Belgrad]] || [[Serbijan kel'|serbijan]]
 |-
