--- a/Vaugedvenälaižed.mw
+++ b/Vaugedvenälaižed.mw
@@ -1,5 +1,5 @@
 [[Fail:Klaudiusz Duż-Duszewski Białorusini.jpg|thumb|right|250px|Vaugedvenälaižed nacionalistad]]
-'''Vaugedvenälaižed''' ([[vaugedvenäkel'|vaug.-ven.]]: ''Беларусы'', [[venäkel'|ven.]]: ''Белорусы'') oma indoevropalaine, slavine rahvaz. Elädas tobjimalaz [[Vaugedvenäma]]s, da mugažo [[AÜV]]:as, [[Venäma]]s, [[Litvanma]]s, [[Ukrain]]as da toižiš valdkundoiš. Vaugedvenälaižiden rahvankeled oma [[vaugedvenäkel']] da [[venäkel']]. Lugu om läz 10 millionad ristitud.
+'''Vaugedvenälaižed''' ([[vaugedvenäkel'|vaug.-ven.]]: ''беларусы'', [[venäkel'|ven.]]: ''белорусы'') oma indoevropalaine, slavine rahvaz. Elädas tobjimalaz [[Vaugedvenäma]]s, da mugažo [[AÜV]]:as, [[Venäma]]s, [[Litvanma]]s, [[Ukrain]]as da toižiš valdkundoiš. Vaugedvenälaižiden rahvankeled oma [[vaugedvenäkel']] da [[venäkel']]. Lugu om läz 10 millionad ristitud.
 {{stub}}
 
 [[Kategorii:Rahvahad]]
