--- a/Sanmarinolaižed.mw
+++ b/Sanmarinolaižed.mw
@@ -1,7 +1,7 @@
 [[Fail:Cerimonia Guardia di Rocca Compagnia di Artiglieria.jpg|thumb|right|250px|Sanmarinolaižed gvardijalaižed]]
 '''Sanmarinolaižed''' ([[italijan kel'|ital.]]: ''sammarinese'', [[emil'jaroman'jan dialekt|emil'.-rom.]]: ''sammarinêṡ'') oma indoevropalaine, romanine rahvaz.
 
-Elädas tobjimalaz [[San Marino]]s. Sanmarinolaižed pagištas [[italijan kel']], a mugažo sen [[emil'jaroman'jan dialekt]]. Lugu om läz 41 tuhad ristitud kaiked mail'madme.
+Elädas tobjimalaz [[San Marino]]s. Sanmarinolaižed pagištas [[italijan kel'|italijan kelel]], a mugažo sil [[emil'jaroman'jan dialekt]]al. Lugu om läz 41 tuhad ristitud kaiked mail'madme.
 {{stub}}
 
 [[Kategorii:Rahvahad]]
