--- a/Zaslavskaja_Tat'jana.mw
+++ b/Zaslavskaja_Tat'jana.mw
@@ -1,5 +1,5 @@
 [[Fail:TIZaslavskaya.jpg|thumb|right|250px|Tat'jana Zaslavskaja]]
-'''Tat'jana Ivanovna Zaslavskaja''' ([[venäkel'|ven.]]: ''Татьяна Ивановна Заславская''; sünd. [[9. kül'mku]] [[1927]], [[Kijev]], [[NSTÜ]] (nüg. [[Ukrain]]) — kol. [[23. eloku]] [[2013]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venälaine sociolog, [[ekonomist]] i [[politolog]], [[VTA]]:n {{k|РАН('а)}} akademik da ekonomižiden tedoiden doktor.
+'''Tat'jana Ivanovna Zaslavskaja''' ([[venäkel'|ven.]]: ''Татьяна Ивановна Заславская''; sünd. [[9. kül'mku]] [[1927]], [[Kijev]], [[NSTÜ]] (nüg. [[Ukrain]]) — kol. [[23. eloku]] [[2013]], [[Moskv]], [[Venäma]]) oli nevondkundaline i venälaine sociolog, [[ekonomist]] da [[politolog]], [[VTA]]:n {{k|РАН('а)}} akademik da ekonomižiden tedoiden doktor.
 {{stub}}
 
 [[Kategorii:Politologad]]
