*Empty MediaWiki Message*

--- a/Vauktoiden_sosiskoiden_ekvator.mw
+++ b/Vauktoiden_sosiskoiden_ekvator.mw
@@ -2,6 +2,9 @@
 [[Fail:Karte Weißwurstäquator.png|thumb|right|250px|Vauktoiden sosiskoiden ekvatoran sijadusen erazvuiččiden versijoiden kart]]
 '''Vauktoiden sosiskoiden ekvator''' ([[Germanijan kel'|germ.]] ''Weißwurstäquator'') om kul'turižen röunan [[Bavarii|Vanhan Bavarijan]] i toižen [[Germanii|Germanijan]] paloiden keskes jumorine nimituz, kudamb lugese kuti [[Münhen|münhenalaižiden]] [[Vauged kolbas|vauktoiden sosiskoiden]] levigandusen zon. Nened vauktad sosiskad oma Bavarijan kul'turan harakterine tunduz.
 
+== Kacu mugažo ==
+* [[Röštigraben]]
+
 {{stub}}
 
 [[Kategorii:Saksanman geografii]]
