*Empty MediaWiki Message*

--- a/Röštigraben.mw
+++ b/Röštigraben.mw
@@ -3,6 +3,9 @@
 
 «Rova» om nimitadud [[röšti]]-sömižen mödhe, kudamb ende oli populärine germanijan Šveicarijas, no nügüd' lugese kogonaižen Šveicarijan rahvahan sömižeks. Keline i kul'turine röun mäneb [[Zane]]-jogedme.
 
+== Kacu mugažo ==
+* [[Vauktoiden sosiskoiden ekvator]]
+
 {{stub}}
 
 [[Kategorii:Šveicarii]]
