*Empty MediaWiki Message*

--- a/HaHaHa_Productions.mw
+++ b/HaHaHa_Productions.mw
@@ -5,7 +5,6 @@
 === Edestajad ===
 * [[Velä Aleks|Aleks Velä]] (''Alex Velea'')
 * Bojer Bibesku (''Boier Bibescu'')
-* Brigi (''Brighi'')
 * DJ CellBlock
 * Don Bakster (''Don Baxter'')
 * Kabron (''Cabron'')
@@ -19,6 +18,10 @@
 === Gruppad ===
 * [[Radio Killer]]
 * [[Simplu]]
+
+== Enččed ühtnijad ==
+* Brigi (''Brighi'')
+* Vanda (''Wanda'')
 
 == Irdkosketused ==
 * [http://www.hahahaproduction.com/ro/production Oficialine sait]
