*Empty MediaWiki Message*

--- a/Venäma_Evrovizijal.mw
+++ b/Venäma_Evrovizijal.mw
@@ -23,7 +23,7 @@
 |-
 | align="center" | [[Venäma Evrovizijas-2000|2000]]
 | [[Alsu]]
-| ''[[Solo]]''
+| ''[[Solo (pajo)|Solo]]''
 | ''—''
 | align="center" | 2.
 |-
