--- a/C._C._Catch_Megamix_'98.mw
+++ b/C._C._Catch_Megamix_'98.mw
@@ -1,4 +1,4 @@
-'''«C. C. Catch Megamix '98»''' (''[[C. C. Catch]]:an megamiks, 98. voz<nowiki>'</nowiki>'') om [[C. C. Catch]]:an „[[megamiks]]“-singl «[[Best of '98]]»-kompiläcijanal'bomas. Om pästtud [[1998]]-žel vodel.
+'''«C. C. Catch Megamix '98»''' (''[[C. C. Catch]]:an megamiks, 98. voz<nowiki>'</nowiki>'') om [[C. C. Catch]]:an „[[megamiks]]“-singl «[[Best of '98]]»-kompiläcijanal'bomas. Om pästtud [[1998]]-žes vodes.
 {{stub}}
 {{C. C. Catch}}
 
