*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul_'98.mw
+++ b/You're_My_Heart,_You're_My_Soul_'98.mw
@@ -1,6 +1,6 @@
 '''«You're My Heart, You're My Soul '98»''' (''Sinä oled minun südäin, sinä oled minun heng; 98. voz<nowiki>'</nowiki>'') om [[Modern Talking]]:an singl «[[Back for Good]]»-al'bomas; pästtud [[1998]]-žes vodes.
 
-Om «[[You're My Heart, You're My Soul]]»-pajon uz' versii, kudamb om pästtud [[1984]]-žel vodel «[[The 1st Album]]»-al'bomas.
+Om «[[You're My Heart, You're My Soul]]»-pajon uz' versii, kudamb om pästtud [[1984]]-žes vodes «[[The 1st Album]]»-al'bomas.
 {{stub}}
 {{Modern Talking}}
 
