*Empty MediaWiki Message*

--- a/Soul_Survivor_'98.mw
+++ b/Soul_Survivor_'98.mw
@@ -1,6 +1,6 @@
 '''«Soul Survivor '98»''' (''Kolmatoi heng, 98. voz<nowiki>'</nowiki>'') om [[C. C. Catch]]:an singl «[[Best of '98]]»-kompiläcijanal'bomas. Om pästtud [[1998]]-žes vodes.
 
-Om «[[Soul Survivor]]»-pajon uz' versii, kudamb om pästtud [[1987]]-žes vodes «[[Like a Hurricane]]»-al'bomas.
+Om '''«[[Soul Survivor]]»'''-pajon uz' versii, kudamb om pästtud [[1987]]-žes vodes «[[Like a Hurricane]]»-al'bomas.
 {{stub}}
 {{C. C. Catch}}
 
