*Empty MediaWiki Message*

--- a/C._C._Catch.mw
+++ b/C._C._Catch.mw
@@ -31,7 +31,7 @@ Om «Diskon kunigaznaižen» oficialitoi titul. Hänen populärižendan pik oli 
 * ''[[C. C. Catch Megamix '98]]'' (1998)
 * ''[[Soul Survivor '98]]'' (1998)
 * ''[[I Can Lose My Heart Tonight '99]]'' (1999)
-* ''[[Shake Your Head]]'' (2003)
+* ''[[Shake Your Head 2003]]'' (2003)
 * ''[[Silence]] (feat. Leela)'' (2004)
 * ''[[Unborn Love]]'' (2010)
 {{stub}}
