--- a/C._C._Catch:an_videografii.mw
+++ b/C._C._Catch:an_videografii.mw
@@ -14,7 +14,7 @@ Se om täuz' '''[[C. C. Catch]]-pajatajan muzikklipoiden kirjutez'''.
 # ''[[Midnight Hour]]'' (1989 — Hear What I Say)
 # ''[[C. C. Catch Megamix '98|Megamix '98]]'' (1998 —[[Best of '98]])
 # ''[[I Can Lose My Heart Tonight '98]]'' (1998 — [[Best of '98]])
-# ''[[Shake Your Head]]'' (2003)
+# ''[[Shake Your Head 2003]]'' (2003)
 # ''[[Silence]]'' (2004)
 {{C. C. Catch}}
 
