*Empty MediaWiki Message*

--- a/C._C._Catch:an_pajod.mw
+++ b/C._C._Catch:an_pajod.mw
@@ -65,7 +65,7 @@ Sen psevdoniman al pajatai pästtud vaiše üks' pajo — «[[Jump In My Car]]»
 # ''Feels Like Heaven'' (Hear What I Say)
 
 === 1990—... (al'bomoita) ===
-# ''[[Shake Your Head]]'' (2003)
+# ''[[Shake Your Head 2003]]'' (2003)
 # ''How Does It Feel'' (2003)
 # ''Spring'' (2003)
 # ''[[Silence]]'' (2004)
