--- a/C._C._Catch:an_diskografii.mw
+++ b/C._C._Catch:an_diskografii.mw
@@ -37,7 +37,7 @@ Se om täuz' '''[[C. C. Catch]]-kollektivan diskografii'''.
 # '''Gwiazdy XX Wieku''' — 2003 '''''(vaiše [[Pol'šanma]]s)'''''
 # '''In the Mix''' — 2003
 # '''The 80’s Album''' — 2005
-# '''Catch the Hits — The Ultimate Collection''' — 2005
+# '''[[Catch the Hits|Catch the Hits — The Ultimate Collection]]''' — 2005
 # '''The Maxi Hit-Sensation (DJ Nonstop Mix)''' — 2006
 # '''Ultimate C.C. Catch''' — 2007
 # '''Greatest Hits (Star Mark Compilation)''' — 2008 '''''(vaiše [[Saksanma]]s)'''''
