*Empty MediaWiki Message*

--- a/Bolgarii.mw
+++ b/Bolgarii.mw
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Bulgaria.svg|300px]]
 |}
-'''Bolgarii''' ({{Lang-bg|Република България}}) — valdkund Evropas, Mustan meren randal. [[EÜ]]n ühtnii. Bolgarijan oma mavaldkundröunad [[Grecii|Grecijanke]], [[Turcii|Turcijanke]], [[Serbii|Serbijanke]], [[Makedonii|Makedonijanke]] da [[Romanii|Romanijanke]].
+'''Bolgarii''' ({{Lang-bg|Република България}}) — valdkund [[Evrop]]as, [[Mustmeri|Mustmeren]] randal. [[EÜ]]:n ühtnii. Bolgarii om mavaldkundröunad [[Grekanma]]nke, [[Turcii|Turcijanke]], [[Serbii|Serbijanke]], [[Makedonii|Makedonijanke]] da [[Romanii|Romanijanke]].
 
 Pälidn — [[Sofii]].</br>
 Eläjiden lugu — 7,6 mil.</br>
@@ -30,7 +30,7 @@ Ohjandusen form — [[Parlamentine tazovaldkund]].
 
 == Ižanduz ==
 
-{{Evropa}}
+{{Evrop}}
 {{stub}}
 
 [[Kategorii:Bolgarii| ]]
