*Empty MediaWiki Message*

--- a/Bolgarii.mw
+++ b/Bolgarii.mw
@@ -1,18 +1,23 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Република България'''<br />'''Tazovaldkund Bolgarii'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Fail:Flag of Bulgaria.svg|150px|Bolgarijan flag|border]]
-| align="center" width="140px" | [[Fail:Coat of arms of Bulgaria.svg|150px|Bolgarijan znam]]
-|-
-| align="center" width="140px" | Bolgarijan flag
-| align="center" width="140px" | Bolgarijan znam
-|}
-|-
-| align=center colspan=2 | [[Fail:EU-Bulgaria.svg|300px]]
-|}
+{{Valdkund
+| Nimi = Bolgarii<br />България
+| Flag = Flag of Bulgaria.svg
+| Valdkundznam = Coat of arms of Bulgaria.svg
+| Valdkundznam text = Bolgarijan valdkundznam
+| Flag text = Bolgarijan flag
+| Pälidn = Sofii
+| Eläjiden lugu = 7 364 570
+| Voz' = 2011
+| Pind = 110 994
+| Kart = EU-Bulgaria.svg
+| Kel' = [[bolgarijan kel'|bolgarijan]]
+| Valdkundan pämez' = [[Plevnelijev Rosen|Rosen Plevnelijev]]
+| Päministr = [[Orešarski Plamen|Plamen Orešarski]]
+| Religii = [[hristanuskond]], [[islam]]
+| Valüt = [[bolgarijan lev]]
+| Internet-domen = [[.bg]]
+| Telefonkod = +359
+| Aigvö = [[UTC]]+3
+}}
 '''Bolgarii''' ({{Lang-bg|Република България}}) — valdkund [[Evrop]]as, [[Mustmeri|Mustmeren]] randal. [[EÜ]]:n ühtnii. Bolgarii om mavaldkundröunad [[Grekanma]]nke, [[Turcii|Turcijanke]], [[Serbii|Serbijanke]], [[Makedonii|Makedonijanke]] da [[Romanii|Romanijanke]].
 
 Pälidn — [[Sofii]].</br>
