*Empty MediaWiki Message*

--- a/Secret_Star.mw
+++ b/Secret_Star.mw
@@ -2,7 +2,7 @@
 
 Ezini «[[Optimal]]»-gruppas (vlspäi 1983 vhesai 1985) kut päsolist ([[C. C. Catch]]:anke). Jäl'ges gruppan čihodamižes hän ezipakiči kontrakt [[Bolen Diter|Diteranke Bolenanke]], no heiden partnörižed kesksidod ei vastnugoi.
 
-[[1987]]-žes vodes hän äneti ''Shy Shy Sugarman''-pajo «Jack's Project»-kollektivan mülükundas. Necil kompozicijal oli eraz satuz (sen paloin, tetab venälaine DJ [[Minajev Oleg|Oleg Minajev]] äneti sen pajon jumoristine kaver ''«Ох уж этот взгляд...»''-nimen al.
+[[1987]]-žes vodes hän äneti ''Shy Shy Sugarman''-pajo «Jack's Project»-kollektivan mülükundas. Necil kompozicijal oli eraz satuz (sen paloin, tetab venälaine DJ [[Minajev Oleg|Oleg Minajev]] äneti sen pajon jumoristine kaver ''«Ох уж этот взгляд...»''-nimen al).
 
 == Diskografii ==
 
