*Empty MediaWiki Message*

--- a/Secret_Star.mw
+++ b/Secret_Star.mw
@@ -17,4 +17,4 @@ Ezini «[[Optimal]]»-gruppas (vlspäi 1983 vhesai 1985) kut päsolist ([[C. C. 
 {{stub}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
-[[Kategorii:Saksanman pajatai]]
+[[Kategorii:Saksanman pajatajad]]
