--- a/Secret_Star.mw
+++ b/Secret_Star.mw
@@ -1,8 +1,8 @@
 '''Secret Star''', tetab mugažo kut '''Salu''' (todesine nimi — '''Sabina Lürenbaum''' ([[saksan kel'|saks.]]: ''Sabine Lürenbaum''), sünd. [[1965]]?) om saksalaine [[evrodisko]]pajatai hätkelitomanke karjeranke.
 
-Ezini «[[Optimal]]»-gruppas (vlspäi 1983 vhesai 1985) kut päsolist ([[C. C. Catch]]:anke). Jäl'ges gruppan čihodamižes hän ezipakiči kontrakt [[Bolen Diter|Diteranke Bolenanke]], no heiden partnörižed kesksidod ei vastnugoi.
+Ezini «[[Optimal]]»-gruppas (vlspäi 1983 vhesai 1985) kut päsolist ([[C. C. Catch]]:anke). Jäl'ges gruppan čihodamižes hän ezipakiči kontraktan [[Bolen Diter|Diteranke Bolenanke]], no heiden partnörižed kesksidod ei vastnugoi.
 
-[[1987]]-žes vodes hän äneti ''Shy Shy Sugarman''-pajo «Jack's Project»-kollektivan mülükundas. Necil kompozicijal oli eraz satuz (sen paloin, tetab venälaine DJ [[Minajev Oleg|Oleg Minajev]] äneti sen pajon jumoristine kaver ''«Ох уж этот взгляд...»''-nimen al).
+[[1987]]-žes vodes hän äneti ''Shy Shy Sugarman''-pajon «Jack's Project»-kollektivan mülükundas. Necil kompozicijal oli eraz satuz (sen paloin, tetab venälaine DJ [[Minajev Oleg|Oleg Minajev]] äneti sen pajon jumoristine kaver ''«Ох уж этот взгляд...»''-nimen al).
 
 == Diskografii ==
 
