fixed web reference

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -53,7 +53,7 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 * {{ESP}} — 2. sija<ref>Salaverri, Fernando (September 2005). Sólo éxitos: año a año, 1959–2002 (1st ed.). Spain: Fundación Autor-SGAE. ISBN 84-8048-639-2.</ref>
 * {{SWE}} — 3. sija<ref>http://www.swedishcharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
 * {{CHE}} — 1. sija<ref>http://www.swisscharts.com/showitem.asp?interpret=Modern+Talking&titel=You%27re+My+Heart%2C+You%27re+My+Soul&cat=s</ref>
-* {{GBR}} — 56. sija<ref>http://www.chartstats.com/artistinfo.php?id=4358</ref>
+* {{GBR}} — 56. sija<ref>http://archive.is/20121204135844/http://www.chartstats.com/artistinfo.php?id=4358</ref>
 
 == Kaverad ==
 {|class="toptextcells"
