*Empty MediaWiki Message*

--- a/You're_My_Heart,_You're_My_Soul.mw
+++ b/You're_My_Heart,_You're_My_Soul.mw
@@ -89,6 +89,10 @@ Pajon geroi — nor' mez', kudamban südäin palab himospäi i armastusespäi ar
 * 2010: [[Ešli Mark|Mark Ešli]]
 |}
 
+== Mel'hetartujad faktad ==
+* Pajon nimi lüheneb hal'g «YMHYMS»:hasai (eriližišti erazviuččiš fansaitoiš).
+* Hot' singl om pästtud vn 1984 lopindas, se mülüi saksalaižihe (dai toižihe evropaližihe) čartoihe vaiše vn 1985 vilukuspäi.<ref>http://www.charts.de/charts.asp?cat=s&country=de&year=1985&date=19850128&x=49&y=12</ref>
+
 == Homaičendad ==
 <references />
 
