--- a/Mec.mw
+++ b/Mec.mw
@@ -1,45 +1,33 @@
-[[Fail:Archangelsk taiga.JPG|pisi|oiged|200px|Tal’vmec (Pineg-jogen taho, [[Arhangel'skan agj]])]]
-'''Mec''' om [[Ma|mašurun]] pindan pala, kattud [[Pukazmused|pukazmusil]]. Mec ottab läz 9,4 procentad Man pindad da läz koumandest kuivman pindad, nece om 38 mln km²<ref>http://www.fao.org/docrep/017/i3110e/i3110e.pdf</ref>. Necen meczonan polišk mülüihe [[Tropikad|tropikoihe]], nelländez om [[Pohjoižmapolišk]]os. [[ÜRK]]:n arvoimižen mödhe, Venäman mecan pind om 8,5 mln km² (851 mln gektarad)<ref>[http://www.fao.org/forestry/country/57478/en/rus/ Venäman Federacijan mecad da mecižanduz]</ref>, Rosleshozan andmusiden mödhe, miččid lugetas toižel metodal, vodel 2011 augotišes, mecfond om 1183,3 mln. gektarad, 797,1 — kattud mecal<ref>http://www.rosleshoz.gov.ru/docs/other/77/1.pdf</ref>.
+[[Fail:Archangelsk taiga.JPG|pisi|oiged|200px|Tal'vmec (Pineg-jogen taho, [[Arhangel'skan agj]])]]
+'''Mec''' om [[Ma]]šurun pindan pala, kattud [[Pukazmused|pukazmusil]]. Mec ottab läz 9,4 procentad Man pindad da läz koumandest kuivman pindad, nece om 38 mln km²<ref>http://www.fao.org/docrep/017/i3110e/i3110e.pdf</ref>. Necen meczonan polišk mülüihe [[Tropikad|tropikoihe]], nelländez om [[Pohjoižmapolišk]]os. [[ÜRK]]:n arvoimižen mödhe, [[Venäma]]n mecan pind om 8,5 mln km² (851 mln gektarad)<ref>[http://www.fao.org/forestry/country/57478/en/rus/ Venäman Federacijan mecad da mecižanduz]</ref>, Rosleshozan andmusiden mödhe, miččid lugetas toižel metodal, vodel 2011 augotišes, mecfond om 1183,3 mln. gektarad, 797,1 — kattud mecal<ref>http://www.rosleshoz.gov.ru/docs/other/77/1.pdf</ref>.
 
 == Mecoiden tipiden vepsän nimed ==
-''Barbik, barbišt'' — hen lehtezmec.
-
-''Harv mec, harvišt'' — mecpind ladvištoiden ümbištundmäranke 0,2—0,3 vähemb.
-
-''Kor’b, šohro,  mecakišt, org'' — paks da amuine da edahaine mec.
-
-''Lomžom'' — mec äiluguižiden lohkaidud puidenke.
-
-''Pihk'' — paks kavag’mec.
-
-''Puregišt'' — paks nor’ mec.
-
-''Rädeg'' — paks da amuine kuz’ne mec.
-
-''Reskač, norišt'' — nor’ mec.
-
-''Šaim'' — mectunu henošti [[so]].
-
-''Vičikišt'' — nor’ paks mec; paks penzhišt.
-
-''Vidä'' — nor’ kuz’ne mec, mž. paks.
+* ''Barbik, barbišt'' — hen lehtezmec.
+* ''Harv mec, harvišt'' — mecpind ladvištoiden ümbištundmäranke 0,2—0,3 vähemb.
+* ''Kor'b, šohro, mecakišt, org'' — paks da amuine da edahaine mec.
+* ''Lomžom'' — mec äiluguižiden lohkaidud puidenke.
+* ''Pihk'' — paks kavag'mec.
+* ''Puregišt'' — paks nor' mec.
+* ''Rädeg'' — paks da amuine kuz'ne mec.
+* ''Reskač, norišt'' — nor' mec.
+* ''Šaim'' — mectunu henošti [[so]].
+* ''Vičikišt'' — nor' paks mec; paks penzhišt.
+* ''Vidä'' — nor’ kuz’ne mec, mž. paks.
 
 == Vepsän tärtused mecanke sidotud ==
-''Uhring'' — notked taho mecas.
+* ''Uhring'' — notked taho mecas.
 
 == Vepsän muštatišed mecanke sidotud ==
-''Azj  eile  kondi,  mecha  ei  mäne.''
-
-''Gorä  ei  mecadme  kävele,  a  rahvastme.''
-
-''Min  edahamb  mecha,  sen  enamb  haugoid.''
+<blockquote>
+* ''Azj  eile  kondi,  mecha  ei  mäne.''
+* ''Gorä  ei  mecadme  kävele,  a  rahvastme.''
+* ''Min  edahamb  mecha,  sen  enamb  haugoid.''
+</blockquote>
 
 == Homaičendad ==
 {{Reflist}}
-
 {{stub}}
 
 [[Kategorii:Biologii]]
 [[Kategorii:Ekosistemad]]
-
-[[ru:Лес]]
+[[Kategorii:Mec|*]]
