*Empty MediaWiki Message*

--- a/Kitai.mw
+++ b/Kitai.mw
@@ -11,10 +11,10 @@
 | Pind = 9.596.960
 | Kart = China in its region (claimed hatched).svg
 | Kel' = [[kitajan kel'|kitajan]]
-| Valdkundan pämez' = [[Si Сzin'pin]]
-| Päministr = [[Ven' Czäbao]]
+| Valdkundan pämez' = [[Хi Jinping]]
+| Päministr = [[Weng Jabao]]
 | Religii = [[buddizm]], [[islam]], [[hristanuskond]], [[konfiucijanuskond]], [[daosizm]]
-| Valüt = [[kitajan juan']]
+| Valüt = [[kitajan juan]]
 | Internet-domen = [[.cn]] (k. mug. — [[Kitajan internet-domenad]])
 | Telefonkod = +86
 | Aigvö = [[UTC]]+8
