--- a/Kitai.mw
+++ b/Kitai.mw
@@ -23,7 +23,7 @@
 
 Eläjiden lugu om 1,347,374,752 ristitud (2010). Pind om 9,596,960 km².
 
-Kitajan ohjandai om [[Si Сzin'pin]], päministr — [[Ven' Czäbao]].
+Kitajan ohjandai om [[Хi Jinping]], päministr — [[Weng Jabao]].
 {{stub}}
 
 [[Kategorii:Kitai| ]]
