*Empty MediaWiki Message*

--- a/Kitai.mw
+++ b/Kitai.mw
@@ -11,10 +11,10 @@
 | Pind = 9.596.960
 | Kart = China in its region (claimed hatched).svg
 | Kel' = [[kitajan kel'|kitajan]]
-| Valdkundan pämez' = [[Хi Jinping]]
-| Päministr = [[Weng Jabao]]
+| Valdkundan pämez' = [[Si Сzin'pin]]
+| Päministr = [[Ven' Czäbao]]
 | Religii = [[buddizm]], [[islam]], [[hristanuskond]], [[konfiucijanuskond]], [[daosizm]]
-| Valüt = [[kitajan juan]]
+| Valüt = [[kitajan juan']]
 | Internet-domen = [[.cn]] (k. mug. — [[Kitajan internet-domenad]])
 | Telefonkod = +86
 | Aigvö = [[UTC]]+8
@@ -23,7 +23,7 @@
 
 Eläjiden lugu om 1,347,374,752 ristitud (2010). Pind om 9,596,960 km².
 
-Kitajan ohjandai om [[Хi Jinping]], päministr — [[Weng Jabao]].
+Kitajan ohjandai om [[Si Сzin'pin]], päministr — [[Ven' Czäbao]].
 {{stub}}
 
 [[Kategorii:Kitai| ]]
