*Empty MediaWiki Message*

--- a/Kitai.mw
+++ b/Kitai.mw
@@ -19,7 +19,7 @@
 | Telefonkod = +86
 | Aigvö = [[UTC]]+8
 }}
-'''Kitai''', vai '''Kitajan rahvahaline tazovaldkund''' ([[kitajan kel'|kit.]]: ''中華人民共和國'') om valdkund [[Azii|Azijas]]. Pälidn om [[Pekin]].
+'''Kitai''', vai '''Kitajan Rahvahaline Tazovaldkund''' ([[kitajan kel'|kit.]]: ''中華人民共和國'') om valdkund [[Azii|Azijas]]. Pälidn om [[Pekin]].
 
 Eläjiden lugu om 1,347,374,752 ristitud (2010). Pind om 9,596,960 km².
 
