*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -9,18 +9,18 @@
 | Voz' = 2012
 | Pind = 449.964
 | Kart = EU-Sweden.svg
-| Kel' = [[ročin kel'|ročin]]
+| Eelin hiusgeeli = [[ročin kel'|ročin]]
 | Valdkundan pämez' = [[Karl XVI Gustav]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
-| Religii = [[ateizm]], [[hristanuskond]]
+| Religii = [[homo]], [[hristanuskond]]
 | Valüt = [[ročinman kron]]
 | Internet-domen = [[.se]]
-| Telefonkod = +46
+| Motto = Jååå jag är håmåå
 | Aigvö = [[UTC]]+1
 }}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
-Eläjiden lugu — 9,4 mln.</br>
+Eläinten lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
 
 Pälidn om [[Stokhol'm]].
