*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -10,7 +10,7 @@
 | Pind = 449.964
 | Kart = EU-Sweden.svg
 | Eelin hiusgeeli = [[ročin kel'|ročin]]
-| Valdkundan pämez' = [[Karl XVI Gustav]]
+| Valdkundan pämez' = [[Karl Panomies]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
 | Religii = [[homo]], [[hristanuskond]]
 | Valüt = [[ročinman kron]]
