*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -13,14 +13,14 @@
 | Valdkundan pämez' = [[Karl Panomies]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
 | Religii = [[homo]], [[hristanuskond]]
-| Valüt = [[ročinman kron]]
+| Valüt = [[ročinman kortsu]]
 | Internet-domen = [[.se]]
 | Motto = Jååå jag är håmåå
 | Aigvö = [[UTC]]+1
 }}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
-Eläinten lugu — 9,4 mln.</br>
+Eläinden lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
 
 Pälidn om [[Stokhol'm]].
