*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -5,7 +5,7 @@
 | Valdkundznam text = Ročinman valdkundznam
 | Flag text = Ročinman flag
 | Pälidn = Stokhol'm
-| Eläjiden lugu = 9.555.893
+| Eläjiden lugu = noen 250
 | Voz' = 2012
 | Pind = 449.964
 | Kart = EU-Sweden.svg
