*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -3,7 +3,7 @@
 | Flag = Flag of Sweden.svg
 | Valdkundznam = Greater coat of arms of Sweden.svg
 | Valdkundznam text = Ročinman valdkundznam
-| Flag text = Ročinman flag
+| Flag text = Kusine lehdisalaad
 | Pälidn = Stokhol'm
 | Eläjiden lugu = noen 250
 | Voz' = 2012
