*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -23,7 +23,7 @@
 Eläinden lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
 
-Pälidn om [[Stokhol'm]].
+Pälidn om [[Hel'sinki]].
 
 {{Evrop}}
 {{stub}}
