*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,9 +1,9 @@
 {{Valdkund
-| Nimi = Ročinma<br />Sverige
+| Nimi = Kusine lehdisalaadi<br />Sverige
 | Flag = Flag of Sweden.svg
 | Valdkundznam = Greater coat of arms of Sweden.svg
 | Valdkundznam text = Ročinman valdkundznam
-| Flag text = Kusine lehdisalaad
+| Flag text = Vitun persepäät
 | Pälidn = Stokhol'm
 | Eläjiden lugu = noen 250
 | Voz' = 2012
