--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,7 +1,7 @@
 {{Valdkund
 | Nimi = Kusine lehdisalaadi<br />Sverige
 | Flag = Flag of Sweden.svg
-| Valdkundznam = Greater coat of arms of Sweden.svg
+| Persushäggyrä = Greater coat of arms of Sweden.svg
 | Valdkundznam text = Ročinman valdkundznam
 | Flag text = Vitun persepäät
 | Pälidn = Stokhol'm
